# macrocast

./: .claudeignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONVENTIONS.html  README.md  REBOOT_IDEA_AND_PLAN_20260414_164256.md  genindex.html  global_claude_md_example.md  index.html  install.html  mkdocs.yml  objects.inv  philosophy.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
_modules/: index.html
api/: compiler.html  decomposition.html  design.html  execution.html  index.html  preprocessing.html  raw.html  recipes.html  registry.html  start.html  sweep_runner.html
architecture/: foundation.html  reproducibility.html
detail/: artifacts_and_manifest.html  custom_extensions.html  decision_tree_navigator.html  default_profiles.html  execution_engine.html  experiment_object.html  fred_sd_inferred_tcode_review_v0_1.html  fred_sd_inferred_tcodes.html  fred_sd_transform_policy.html  index.html  layer0_meta_audit.html  layer1_data_task_audit.html  layer2_closure_ledger.html  layer2_feature_representation.html  layer2_layer3_detailed_design.html  layer2_layer3_grid_examples.html  layer2_layer3_sweep_contract.html  layer2_revision_plan.html  layer3_training_audit.html  layer_audit.html  layer_axis_census.html  layer_axis_migration_plan.html  layer_boundary_contract.html  layer_contract_ledger.html  package_runtime_gap_audit.html  philosophy.html  post_pr70_runtime_roadmap.html  preprocessing_layer_audit.html  raw_panel_iterated_contract.html  recipe_layers.html  registry_axes.html  reproducibility.html  target_transformer.html  terminology.html
docs/: DESIGN.md  compiler.md  conf.py  execution.md  getting-started.md  index.md  install.md  preprocessing.md  rag_papers_to_add.md  raw.md  (+4 more)
(+728 files in other folders)
